# genart

./: .gitignore  README.md  default.nix
backend/: backend.cabal
backend/src/: Backend.hs
common/src/Common/: Api.hi
devel/: Devel.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hi  Frontend.hs  README.md  Squares.hi  Squares.hs
nix/: reflex-dom-canvas.json  reflex-dom-canvas.nix  reflex-dom-svg.json  reflex-dom-svg.nix  update.sh
static/css/: genart.css
