name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , reflex >= 0.5 && < 0.6
               , reflex-dom >= 0.4 && < 0.5
               , reflex-dom-core >= 0.4 && < 0.5
               , common
               , frontend
               , obelisk-backend
  exposed-modules:
    Backend
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , lens
               , modern-uri
               , obelisk-backend
               , obelisk-executable-config
               , obelisk-executable-config-inject
               , text
