name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex >= 0.5 && <0.6
               , reflex-dom >= 0.4 && <0.5
               , reflex-dom-core >= 0.4 && <0.5
               , reflex-dom-svg
               , reflex-dom-canvas
               , static
               , text
  exposed-modules:
    Frontend
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom >= 0.4 && <= 0.5
               , static
               , text
               , frontend
  -- TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
